feat: Implement Gemini Chatbot with disease context retrieval and enhanced user interaction
- Added geminiChatRoutes.js for handling chatbot interactions and responses.
- Integrated Google Generative AI for generating health-related answers.
- Implemented disease context retrieval from local JSON database in diseaseRetriever.js.
- Enhanced keyword recognition for food, health, and nutrition inquiries.
- Created ChatFab component for a floating chat button in the frontend.
- Added basic styles for the chatbot interface.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,16 @@
     "@react-three/fiber": "^9.4.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.181.1"
   },
   "devDependencies": {
