--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,17 @@
   "author": "FoodMeds Team",
   "license": "ISC",
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
