--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "groq-sdk": "^0.35.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "node-fetch": "^3.3.2",
